--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           goos: ${{ matrix.goos }}
           goarch: ${{ matrix.goarch }}
-          project_path: "./cmd/gotp"
+          project_path: "./"
           binary_name: "gotp"
           ldflags: "-s -w"
           extra_files: LICENSE Readme.md
